hphp/hack/test/typecheck/dynamic_calls/dynamically_callable_reified.php.exp
File "dynamically_callable_reified.php", line 3, characters 3-23:
`__DynamicallyCallable` cannot be used on reified functions or methods (NastCheck[3089])
