hphp/hack/test/typecheck/dynamic_calls/dynamically_callable_reified.php
<?hh

<<__DynamicallyCallable>>
function test<reify T>(): void {}
